# MAD-based-RFI-mitigator

./: .project  README.md
Algo/: top_rfi.diagram  top_rfi.pi  top_rfi2.diagram  top_rfi2.pi  top_rfi_C++.diagram  top_rfi_C++.pi  top_rfi_C.diagram  top_rfi_C.pi
Algo/SCAPE/: top_rfi_scape_full.pi
Algo/SCAPE C/: top_rfi_scape_part.diagram  top_rfi_scape_part.pi
Algo/multinode/: sub0_rfi.diagram  sub0_rfi.pi  sub1_rfi.diagram  sub1_rfi.pi  sub2_rfi.diagram  sub2_rfi.pi  top_rfi.diagram  top_rfi.pi
Archi/: 4CoresX86.slam  8CoresX86.slam  H_3node_3.3.3_f0.csv  PYNQ.layout  top_archi4.layout  top_archi4.slam
Code/: CMakeLists.txt
Code/dat/.ipynb_checkpoints/: block_mode_MAD-checkpoint.ipynb
Code/include/: dataAcq.h  plotRnISeries.h  preesm.h
Code/src/: dataAcq.c  plotRnIHisto.c  plotRnISeries.c  plotThreshold.c
Code1CoreX86/: CMakeLists.txt
Code1CoreX86/dat/: analysis2.csv  filtered_data.dada
Code1CoreX86/include/: plotFilteredData.h  plotRnIHisto.h  preesm.h  stdCpt.h
Code1CoreX86/src/: madCpt.c  plotRnIHisto.c  stdCpt.c
Code1CoreX86SCAPE/: CMakeLists.txt
Code1CoreX86SCAPE/dat/: filtered_data.dada  test_small_dada.ipynb
Code1CoreX86SCAPE/include/: medianCpt.h  preesm.h  stdCpt.h  top.h
Code1CoreX86SCAPE/src/: madCpt.c  medianCpt.c  plotFilteredData.c  rfiFilter.c  top.c
Code8CoreX86/dat/: J1939_plus_2134_1152MHz.dada
Code8CoreX86/dat/.ipynb_checkpoints/: test_small_dada-checkpoint.ipynb
Code8CoreX86/include/: dataAcq.h  madCpt.h  plotThreshold.h
Code8CoreX86/src/: dataAcq.c
Code8CoreX86SCAPE/dat/: sort_real.data
Code8CoreX86SCAPE/include/: preesm.h
Code8CoreX86SCAPE/src/: madCpt.c
CodeFPGA/: CMakeLists.txt
CodeFPGA/dat/.ipynb_checkpoints/: small_dada-checkpoint.py
CodeFPGA/include/: dataAcq.hpp  dataRes.hpp  madCpt.hpp  plotFilteredData.hpp  plotRnIHisto.hpp  plotThreshold.hpp  rfiFilter.hpp  stdCpt.hpp  top.h
CodeFPGA/jpt_cheat_code/: host_pynq_top_rfi_C.ipynb  top_rfi_C.bit  top_rfi_C.hwh
CodeFPGA/jpt_cheat_code/.ipynb_checkpoints/: host_pynq_top_rfi_C-checkpoint.ipynb
CodeFPGA/src/: dataAcq.c  top.c
Scenarios/: rfi_1coreX86.scenario  top_rfi_1CoresX86.scenario  top_rfi_1CoresX86_SCAPE.scenario  top_rfi_8CoresX86.scenario  top_rfi_FPGA.scenario  top_rfi_nCoresX86_SCAPE.scenario
Scenarios/archi4/: sub0_archi4.scenario  sub2_archi4.scenario  top_archi4.scenario
Workflows/: Codegen.workflow  Codegen2.layout  Codegen2.workflow  FPGAanalysis.layout  FPGAanalysis.workflow  InstrumentedCodegen2.layout  InstrumentedCodegen2.workflow
dat/: block_mode_MAD.ipynb  test_small_dada.ipynb
